--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     height: 700px;
     width: 700px;
     outline: 2px solid black;
-    background-color: beige;
+    background-color: white;
 }
 
 .cell {
