--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,51 @@
+body {
+    background-color: beige;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttons {
+    display: flex;
+    gap: 15px;
+}
+
+button {
+    padding: 0.4rem 1.5rem;
+    font-size: 0.8rem;
+}
+
+#black {
+    background-color: black;
+    color: white;
+}
+
+#rgb {
+    background-image: linear-gradient(to right,#E55D87 0%, #5FC3E4  51%, #E55D87  100%);
+    color: black;    
+}
+
+#eraser {
+    background-color: pink;
+    color: white;
+}
+
+#reset {
+    background-color: white;
+    color: black;
+}
+
 .grid {
     display: grid;
     height: 700px;
     width: 700px;
     outline: 2px solid black;
     background-color: white;
+    margin-top: 25px;
 }
 
 .cell {
