--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ h1 {
     font-size: 3rem;
     font-weight: 800;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 0;
 }
 
 .buttons {
